# university_project

./: CMakeLists.txt  Makefile  a.out  assembler  assembler.c  code_func.c  code_func.h  directive_sen.c  directive_sen.h  directives_table.c  directives_table.h  dst_operand.c  dst_operand.h  err_prog.as  f.txt  file.txt  first_operand.c  first_operand.h  first_transition.c  first_transition.h  guidance_sen.c  guidance_sen.h  instruction_validation.c  instruction_validation.h  main.c  output.txt  read_files.c  read_files.h  read_write_files.h  second_operand.c  second_operand.h  second_transition.c  second_transition.h  src_operand.c  src_operand.h  symbol_table.c  symbol_table.h
in_out_err_example/: err_prog.as
in_out_examples/: as_prog.as  as_prog.ob  my_prog.as  my_prog.ent  my_prog.ext  my_prog.ob
